k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website-service
spec:
  type: ClusterIP
  selector:
    app: my-website # Connects this service to your deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
